[package]
name = "pw-volume"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
clap = "2.33.3"
anyhow = "1.0.56"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
